forth/test/fail/test_local_assignment_leading_dot.af
\ Must fail to compile.
fun: .test_local_assignment_leading_dot { -- err }
  { .tmp }
end
